--- a/src/web/assets/css/_reset.scss
+++ b/src/web/assets/css/_reset.scss
@@ -12,7 +12,7 @@
 :after,
 :before {
 	box-sizing: border-box;
-	flex-shrink: 0;
+	// flex-shrink: 0;
 }
 
 :root {
@@ -25,7 +25,6 @@
 	font-size: 14px;
 	cursor: default;
 	line-height: 1;
-	// letter-spacing: -0.025em;
 	overflow-wrap: break-word;
 	tab-size: 4;
 }
