--- a/src/web/assets/css/main.scss
+++ b/src/web/assets/css/main.scss
@@ -595,12 +595,7 @@
 		}
 		.menu__round {
 			padding-top: 112.5%;
-			border-radius: 32px;
-		}
-		.menu__category {
-			width: 170px;
-			height: 83px;
-			font-size: 28px;
+			// border-radius: 32px;
 		}
 	}
 }
