상품상세 작업중

--- a/src/web/assets/css/_components.scss
+++ b/src/web/assets/css/_components.scss
@@ -85,4 +85,9 @@
 	.btn__underline {
 		text-decoration: underline;
 	}
+
+  @include breakpoints.mobile() {
+		margin-left: 15px;
+		margin-right: 15px;
+	}
 }
