--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -51,15 +51,6 @@
   .qty_button {
     width: 36px;
   }
-  @include breakpoints.mobile() {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    background-color: #5eecfa;
-    padding: 25px 20px;
-    border-radius: 40px;
-    overflow: hidden;
-  }
 }
 .product__opt--list {
   margin-bottom: 14px;
@@ -319,7 +310,53 @@
     max-width: 750px;
     max-height: inherit;
     overflow: inherit;
-    padding: 25px 20px;
+    // padding: 25px 20px;
+    padding: 0;
+    border: 0;
+    // border-top: 1px solid #000000;
+    // border-top-left-radius: 40px;
+
+    .detail_info--inner {
+      display: flex;
+      flex-direction: column;
+      padding: 30px 0 0;
+      .product__type {order: 1; padding-left: 20px; padding-right: 20px;}
+      .product__name {order: 2; padding-left: 20px; padding-right: 20px;}
+      .product__price {order: 3; padding-left: 20px; padding-right: 20px;}
+      .product__tag {order: 4; padding-left: 20px; padding-right: 20px;}
+      .product__reivew {order: 5; padding-left: 20px; padding-right: 20px;}
+      .product__accordion {order: 6; padding-left: 20px; padding-right: 20px;}
+      .product__action {order: 7; padding-left: 20px; padding-right: 20px;}
+      .product__option {order: 8}
+    }
+    &:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      display: block;
+      width: 100%;
+      height: 100px;
+      border-top: 1px solid #000000;
+      border-radius: 40px;
+    }
+    .product__action {
+      border-bottom: 1px solid #000000;
+      border-radius: 40px;
+      padding-bottom: 25px;
+      // padding: 25px 20px 0;
+    }
+
+    .product__option {
+      // position: absolute;
+      // left: 0;
+      width: 100%;
+      background-color: #5eecfa;
+      padding: 25px 20px;
+      margin-top: 8px;
+      border-radius: 40px;
+      overflow: hidden;
+    }
+
   }
 }
 .product__additional {
@@ -591,10 +628,12 @@
       display: inline-block;
       @include icons.retina-sprite(icons.$ico-like-group);
       &.seleted {
+        @include icons.retina-sprite(icons.$ico-like-on-group);
       }
     }
     .morecnt_section {
       margin-right: 18px;
+      @include mixins.PtdMedium();
     }
     .rv__moreinfo {
       position: relative;
@@ -605,6 +644,7 @@
         border:1px solid #000000;
         border-radius: 15px;
         padding:9px 10px;
+        @include mixins.PtdMedium();
       }
     }
     .btn__rvshare {
@@ -615,6 +655,69 @@
       @include icons.retina-sprite(icons.$ico-share-group);
       &.seleted {
       }
+    }
+
+    @include breakpoints.mobile() {
+      margin-left: 15px;
+      margin-right: 15px;
+      border-bottom: 0;
+      .review__list--item {
+        padding-right: 0;
+        padding: 20px 0px;
+        border-bottom: 1px solid #000000;
+      }
+      .rv__prname {
+        font-size: 12px;
+      }
+      .rv__prcode {
+        font-size: 10px;
+      }
+      .rv__text {
+        padding-right: 0;
+        font-size: 16px;
+      }
+      .rv__count {
+        font-size: 12px;
+        text-align: right;
+      }
+      .rv__thumnb {
+        width: 110px;
+        height: 110px;
+        border-radius: 26px;
+        span {
+          padding: 6px 13px;
+          font-size: 24px;
+          em {
+            font-size: 21px;
+          }
+        }
+      }
+      .morecnt_section {
+        margin-right: 10px;
+        font-size: 11px;
+        &:last-child {
+          margin-right:0;
+        }
+      }
+      .rv__morecnt {
+        margin-top: 15px;
+      }
+      .rv__moreinfo {
+        margin-top: 20px;
+        .info_tag {
+          padding: 8px 13px;
+          margin-right: 5px;
+          font-size: 11px;
+        }
+      }
+      .btn__rvlike {
+        width: 16px;
+        @include mixins.sprite(mo_icons.$ico-like);
+        &.seleted {
+          @include mixins.sprite(mo_icons.$ico-like-on);
+        }
+      }
+      .review__list--line {display: none;}
     }
   } //.review__list--cont 
   .review_paging {
@@ -647,6 +750,29 @@
   .list__bottom {
     .btn__underline {
       font-size: 18px;
+    }
+  }
+
+  @include breakpoints.mobile() {
+    .review_paging {
+      height: 36px;
+      justify-content: center;
+      .btn__prev, .btn__next { 
+        width: 36px;
+        height: 36px;
+      }
+      .paging_number {
+        p, span {
+          font-size: 14px;
+          line-height: 34px;
+        }
+      }
+    }
+
+    .list__bottom {
+      .btn__underline {
+        font-size: 10px;
+      }
     }
   }
 }
