--- a/src/web/assets/css/sprite/_mo_icons.scss
+++ b/src/web/assets/css/sprite/_mo_icons.scss
@@ -17,9 +17,9 @@ $bg-header-funkplay-off-offset-y: 0px;
 $bg-header-funkplay-off-width: 140px;
 $bg-header-funkplay-off-height: 80px;
 $bg-header-funkplay-off-total-width: 281px;
-$bg-header-funkplay-off-total-height: 143px;
+$bg-header-funkplay-off-total-height: 149px;
 $bg-header-funkplay-off-image: '../images/sprite/mo_icons.png';
-$bg-header-funkplay-off: (141px, 0px, -141px, 0px, 140px, 80px, 281px, 143px, '../images/sprite/mo_icons.png', 'bg_header_funkplay_off', );
+$bg-header-funkplay-off: (141px, 0px, -141px, 0px, 140px, 80px, 281px, 149px, '../images/sprite/mo_icons.png', 'bg_header_funkplay_off', );
 $bg-header-funkplay-on-name: 'bg_header_funkplay_on';
 $bg-header-funkplay-on-x: 0px;
 $bg-header-funkplay-on-y: 0px;
@@ -28,31 +28,53 @@ $bg-header-funkplay-on-offset-y: 0px;
 $bg-header-funkplay-on-width: 141px;
 $bg-header-funkplay-on-height: 80px;
 $bg-header-funkplay-on-total-width: 281px;
-$bg-header-funkplay-on-total-height: 143px;
+$bg-header-funkplay-on-total-height: 149px;
 $bg-header-funkplay-on-image: '../images/sprite/mo_icons.png';
-$bg-header-funkplay-on: (0px, 0px, 0px, 0px, 141px, 80px, 281px, 143px, '../images/sprite/mo_icons.png', 'bg_header_funkplay_on', );
+$bg-header-funkplay-on: (0px, 0px, 0px, 0px, 141px, 80px, 281px, 149px, '../images/sprite/mo_icons.png', 'bg_header_funkplay_on', );
 $btn-header-search-name: 'btn_header_search';
-$btn-header-search-x: 0px;
+$btn-header-search-x: 62px;
 $btn-header-search-y: 98px;
-$btn-header-search-offset-x: 0px;
+$btn-header-search-offset-x: -62px;
 $btn-header-search-offset-y: -98px;
 $btn-header-search-width: 32px;
 $btn-header-search-height: 21px;
 $btn-header-search-total-width: 281px;
-$btn-header-search-total-height: 143px;
+$btn-header-search-total-height: 149px;
 $btn-header-search-image: '../images/sprite/mo_icons.png';
-$btn-header-search: (0px, 98px, 0px, -98px, 32px, 21px, 281px, 143px, '../images/sprite/mo_icons.png', 'btn_header_search', );
+$btn-header-search: (62px, 98px, -62px, -98px, 32px, 21px, 281px, 149px, '../images/sprite/mo_icons.png', 'btn_header_search', );
 $ico-header-search-name: 'ico_header_search';
 $ico-header-search-x: 0px;
-$ico-header-search-y: 119px;
+$ico-header-search-y: 125px;
 $ico-header-search-offset-x: 0px;
-$ico-header-search-offset-y: -119px;
+$ico-header-search-offset-y: -125px;
 $ico-header-search-width: 24px;
 $ico-header-search-height: 24px;
 $ico-header-search-total-width: 281px;
-$ico-header-search-total-height: 143px;
+$ico-header-search-total-height: 149px;
 $ico-header-search-image: '../images/sprite/mo_icons.png';
-$ico-header-search: (0px, 119px, 0px, -119px, 24px, 24px, 281px, 143px, '../images/sprite/mo_icons.png', 'ico_header_search', );
+$ico-header-search: (0px, 125px, 0px, -125px, 24px, 24px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_header_search', );
+$ico-like-name: 'ico_like';
+$ico-like-x: 0px;
+$ico-like-y: 98px;
+$ico-like-offset-x: 0px;
+$ico-like-offset-y: -98px;
+$ico-like-width: 31px;
+$ico-like-height: 27px;
+$ico-like-total-width: 281px;
+$ico-like-total-height: 149px;
+$ico-like-image: '../images/sprite/mo_icons.png';
+$ico-like: (0px, 98px, 0px, -98px, 31px, 27px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_like', );
+$ico-like-on-name: 'ico_like_on';
+$ico-like-on-x: 31px;
+$ico-like-on-y: 98px;
+$ico-like-on-offset-x: -31px;
+$ico-like-on-offset-y: -98px;
+$ico-like-on-width: 31px;
+$ico-like-on-height: 26px;
+$ico-like-on-total-width: 281px;
+$ico-like-on-total-height: 149px;
+$ico-like-on-image: '../images/sprite/mo_icons.png';
+$ico-like-on: (31px, 98px, -31px, -98px, 31px, 26px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_like_on', );
 $logo-name: 'logo';
 $logo-x: 0px;
 $logo-y: 80px;
@@ -61,14 +83,14 @@ $logo-offset-y: -80px;
 $logo-width: 231px;
 $logo-height: 18px;
 $logo-total-width: 281px;
-$logo-total-height: 143px;
+$logo-total-height: 149px;
 $logo-image: '../images/sprite/mo_icons.png';
-$logo: (0px, 80px, 0px, -80px, 231px, 18px, 281px, 143px, '../images/sprite/mo_icons.png', 'logo', );
+$logo: (0px, 80px, 0px, -80px, 231px, 18px, 281px, 149px, '../images/sprite/mo_icons.png', 'logo', );
 $mo-icons-width: 281px;
-$mo-icons-height: 143px;
+$mo-icons-height: 149px;
 $mo-icons-image: '../images/sprite/mo_icons.png';
-$mo-icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $btn-header-search, $ico-header-search, $logo, );
-$mo-icons: (281px, 143px, '../images/sprite/mo_icons.png', $mo-icons-sprites, );
+$mo-icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $btn-header-search, $ico-header-search, $ico-like, $ico-like-on, $logo, );
+$mo-icons: (281px, 149px, '../images/sprite/mo_icons.png', $mo-icons-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
