--- a/src/web/assets/css/sprite/_icons.scss
+++ b/src/web/assets/css/sprite/_icons.scss
@@ -54,16 +54,16 @@ $btn-header-search-total-height: 63px;
 $btn-header-search-image: '../images/sprite/icons.png';
 $btn-header-search: (94px, 14px, -94px, -14px, 34px, 21px, 161px, 63px, '../images/sprite/icons.png', 'btn_header_search', );
 $ico-header-search-name: 'ico_header_search';
-$ico-header-search-x: 36px;
+$ico-header-search-x: 56px;
 $ico-header-search-y: 46px;
-$ico-header-search-offset-x: -36px;
+$ico-header-search-offset-x: -56px;
 $ico-header-search-offset-y: -46px;
 $ico-header-search-width: 15px;
 $ico-header-search-height: 15px;
 $ico-header-search-total-width: 161px;
 $ico-header-search-total-height: 63px;
 $ico-header-search-image: '../images/sprite/icons.png';
-$ico-header-search: (36px, 46px, -36px, -46px, 15px, 15px, 161px, 63px, '../images/sprite/icons.png', 'ico_header_search', );
+$ico-header-search: (56px, 46px, -56px, -46px, 15px, 15px, 161px, 63px, '../images/sprite/icons.png', 'ico_header_search', );
 $ico-like-name: 'ico_like';
 $ico-like-x: 0px;
 $ico-like-y: 46px;
@@ -75,6 +75,17 @@ $ico-like-total-width: 161px;
 $ico-like-total-height: 63px;
 $ico-like-image: '../images/sprite/icons.png';
 $ico-like: (0px, 46px, 0px, -46px, 20px, 17px, 161px, 63px, '../images/sprite/icons.png', 'ico_like', );
+$ico-like-on-name: 'ico_like_on';
+$ico-like-on-x: 20px;
+$ico-like-on-y: 46px;
+$ico-like-on-offset-x: -20px;
+$ico-like-on-offset-y: -46px;
+$ico-like-on-width: 20px;
+$ico-like-on-height: 17px;
+$ico-like-on-total-width: 161px;
+$ico-like-on-total-height: 63px;
+$ico-like-on-image: '../images/sprite/icons.png';
+$ico-like-on: (20px, 46px, -20px, -46px, 20px, 17px, 161px, 63px, '../images/sprite/icons.png', 'ico_like_on', );
 $ico-share-name: 'ico_share';
 $ico-share-x: 128px;
 $ico-share-y: 14px;
@@ -87,16 +98,16 @@ $ico-share-total-height: 63px;
 $ico-share-image: '../images/sprite/icons.png';
 $ico-share: (128px, 14px, -128px, -14px, 21px, 20px, 161px, 63px, '../images/sprite/icons.png', 'ico_share', );
 $ico-star-name: 'ico_star';
-$ico-star-x: 20px;
+$ico-star-x: 40px;
 $ico-star-y: 46px;
-$ico-star-offset-x: -20px;
+$ico-star-offset-x: -40px;
 $ico-star-offset-y: -46px;
 $ico-star-width: 16px;
 $ico-star-height: 16px;
 $ico-star-total-width: 161px;
 $ico-star-total-height: 63px;
 $ico-star-image: '../images/sprite/icons.png';
-$ico-star: (20px, 46px, -20px, -46px, 16px, 16px, 161px, 63px, '../images/sprite/icons.png', 'ico_star', );
+$ico-star: (40px, 46px, -40px, -46px, 16px, 16px, 161px, 63px, '../images/sprite/icons.png', 'ico_star', );
 $logo-name: 'logo';
 $logo-x: 0px;
 $logo-y: 0px;
@@ -153,16 +164,16 @@ $btn-header-search-2x-total-height: 126px;
 $btn-header-search-2x-image: '../images/sprite/icons@2x.png';
 $btn-header-search-2x: (188px, 28px, -188px, -28px, 68px, 42px, 322px, 126px, '../images/sprite/icons@2x.png', 'btn_header_search@2x', );
 $ico-header-search-2x-name: 'ico_header_search@2x';
-$ico-header-search-2x-x: 72px;
+$ico-header-search-2x-x: 112px;
 $ico-header-search-2x-y: 92px;
-$ico-header-search-2x-offset-x: -72px;
+$ico-header-search-2x-offset-x: -112px;
 $ico-header-search-2x-offset-y: -92px;
 $ico-header-search-2x-width: 30px;
 $ico-header-search-2x-height: 30px;
 $ico-header-search-2x-total-width: 322px;
 $ico-header-search-2x-total-height: 126px;
 $ico-header-search-2x-image: '../images/sprite/icons@2x.png';
-$ico-header-search-2x: (72px, 92px, -72px, -92px, 30px, 30px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_header_search@2x', );
+$ico-header-search-2x: (112px, 92px, -112px, -92px, 30px, 30px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_header_search@2x', );
 $ico-like-2x-name: 'ico_like@2x';
 $ico-like-2x-x: 0px;
 $ico-like-2x-y: 92px;
@@ -174,6 +185,17 @@ $ico-like-2x-total-width: 322px;
 $ico-like-2x-total-height: 126px;
 $ico-like-2x-image: '../images/sprite/icons@2x.png';
 $ico-like-2x: (0px, 92px, 0px, -92px, 40px, 34px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_like@2x', );
+$ico-like-on-2x-name: 'ico_like_on@2x';
+$ico-like-on-2x-x: 40px;
+$ico-like-on-2x-y: 92px;
+$ico-like-on-2x-offset-x: -40px;
+$ico-like-on-2x-offset-y: -92px;
+$ico-like-on-2x-width: 40px;
+$ico-like-on-2x-height: 34px;
+$ico-like-on-2x-total-width: 322px;
+$ico-like-on-2x-total-height: 126px;
+$ico-like-on-2x-image: '../images/sprite/icons@2x.png';
+$ico-like-on-2x: (40px, 92px, -40px, -92px, 40px, 34px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_like_on@2x', );
 $ico-share-2x-name: 'ico_share@2x';
 $ico-share-2x-x: 256px;
 $ico-share-2x-y: 28px;
@@ -186,16 +208,16 @@ $ico-share-2x-total-height: 126px;
 $ico-share-2x-image: '../images/sprite/icons@2x.png';
 $ico-share-2x: (256px, 28px, -256px, -28px, 42px, 40px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_share@2x', );
 $ico-star-2x-name: 'ico_star@2x';
-$ico-star-2x-x: 40px;
+$ico-star-2x-x: 80px;
 $ico-star-2x-y: 92px;
-$ico-star-2x-offset-x: -40px;
+$ico-star-2x-offset-x: -80px;
 $ico-star-2x-offset-y: -92px;
 $ico-star-2x-width: 32px;
 $ico-star-2x-height: 32px;
 $ico-star-2x-total-width: 322px;
 $ico-star-2x-total-height: 126px;
 $ico-star-2x-image: '../images/sprite/icons@2x.png';
-$ico-star-2x: (40px, 92px, -40px, -92px, 32px, 32px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_star@2x', );
+$ico-star-2x: (80px, 92px, -80px, -92px, 32px, 32px, 322px, 126px, '../images/sprite/icons@2x.png', 'ico_star@2x', );
 $logo-2x-name: 'logo@2x';
 $logo-2x-x: 0px;
 $logo-2x-y: 0px;
@@ -210,12 +232,12 @@ $logo-2x: (0px, 0px, 0px, 0px, 322px, 28px, 322px, 126px, '../images/sprite/icon
 $icons-width: 161px;
 $icons-height: 63px;
 $icons-image: '../images/sprite/icons.png';
-$icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $bg-select, $btn-header-search, $ico-header-search, $ico-like, $ico-share, $ico-star, $logo, );
+$icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $bg-select, $btn-header-search, $ico-header-search, $ico-like, $ico-like-on, $ico-share, $ico-star, $logo, );
 $icons: (161px, 63px, '../images/sprite/icons.png', $icons-sprites, );
 $retina-spritesheet-width: 322px;
 $retina-spritesheet-height: 126px;
 $retina-spritesheet-image: '../images/sprite/icons@2x.png';
-$retina-spritesheet-sprites: ($bg-header-funkplay-off-2x, $bg-header-funkplay-on-2x, $bg-select-2x, $btn-header-search-2x, $ico-header-search-2x, $ico-like-2x, $ico-share-2x, $ico-star-2x, $logo-2x, );
+$retina-spritesheet-sprites: ($bg-header-funkplay-off-2x, $bg-header-funkplay-on-2x, $bg-select-2x, $btn-header-search-2x, $ico-header-search-2x, $ico-like-2x, $ico-like-on-2x, $ico-share-2x, $ico-star-2x, $logo-2x, );
 $retina-spritesheet: (322px, 126px, '../images/sprite/icons@2x.png', $retina-spritesheet-sprites, );
 
 // These "retina group" variables are mappings for the naming and pairing of normal and retina sprites.
@@ -233,13 +255,15 @@ $ico-header-search-group-name: 'ico_header_search';
 $ico-header-search-group: ('ico_header_search', $ico-header-search, $ico-header-search-2x, );
 $ico-like-group-name: 'ico_like';
 $ico-like-group: ('ico_like', $ico-like, $ico-like-2x, );
+$ico-like-on-group-name: 'ico_like_on';
+$ico-like-on-group: ('ico_like_on', $ico-like-on, $ico-like-on-2x, );
 $ico-share-group-name: 'ico_share';
 $ico-share-group: ('ico_share', $ico-share, $ico-share-2x, );
 $ico-star-group-name: 'ico_star';
 $ico-star-group: ('ico_star', $ico-star, $ico-star-2x, );
 $logo-group-name: 'logo';
 $logo-group: ('logo', $logo, $logo-2x, );
-$retina-groups: ($bg-header-funkplay-off-group, $bg-header-funkplay-on-group, $bg-select-group, $btn-header-search-group, $ico-header-search-group, $ico-like-group, $ico-share-group, $ico-star-group, $logo-group, );
+$retina-groups: ($bg-header-funkplay-off-group, $bg-header-funkplay-on-group, $bg-select-group, $btn-header-search-group, $ico-header-search-group, $ico-like-group, $ico-like-on-group, $ico-share-group, $ico-star-group, $logo-group, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
