--- a/src/web/assets/css/main.scss
+++ b/src/web/assets/css/main.scss
@@ -8,7 +8,7 @@
 
 .visual {
 	.visual__container {
-		height: 100vh;
+		height: calc(var(--vh, 1vh) * 100);
 		background-color: #5eecfa;
 		.swiper-container {
 			height: 100%;
