상품상세 작업중

--- a/src/web/assets/css/_reset.scss
+++ b/src/web/assets/css/_reset.scss
@@ -58,6 +58,7 @@ button {
 
 a {
 	text-decoration: none;
+	cursor: pointer;
 }
 
 table {
@@ -301,6 +302,17 @@ textarea {
 			display: none;
 		}
 	}
+}
+
+.a11y {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	border: 0;
 }
 
 #contents {
