--- a/src/web/assets/css/_components.scss
+++ b/src/web/assets/css/_components.scss
@@ -71,7 +71,7 @@
 	}
 }
 
-
+// pinterest list
 .card_board {
 	position: relative;
 	li {
@@ -80,6 +80,7 @@
 	}
 }
 
+// list bottom area
 .list__bottom {
 	display: flex;
 	.btn__underline {
@@ -89,5 +90,45 @@
   @include breakpoints.mobile() {
 		margin-left: 15px;
 		margin-right: 15px;
+	}
+}
+
+// layer
+.layer__body {
+	// display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 100;
+	.layer__wrap {
+		position: absolute;
+		top:50%;
+		left:50%;
+		@include mixins.translate(-50%, -50%);
+		background-color: #ffffff;
+		z-index: 101;
+	}
+	.layer__button {
+		display: flex;
+		.btn {
+			flex: 1;
+			margin: 0 5px;
+			padding: 14px 0;
+			font-size: 16px;
+			border-radius: 42px;
+		}	
+	}
+	.layer__close {
+		position: absolute;
+		right: 30px;
+		top: 40px;
+		.btn__close {
+			display: block;
+			@include icons.retina-sprite(icons.$ico-close-group);
+			cursor: pointer;
+		}
 	}
 }
