--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -776,6 +776,45 @@
     }
   }
 }
+.product_basketadd {
+  .layer__wrap {
+    display: flex;
+    width: 530px;
+    height: 330px;
+    border: 1px solid #000;
+    border-radius: 42px;
+    overflow: hidden;
+    align-items: center;
+    justify-content: center;
+  }
+  .layer__content {
+    position: relative;
+    height: 100%;
+    padding-top: 60px;
+    align-items: center;
+    text-align: center;
+  }
+  .ico_basket {
+    display: block;
+    @include icons.retina-sprite(icons.$ico-basket-group);
+    margin: 0 auto 30px;
+  }
+  p {
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .layer__button {
+    margin-top: 50px;
+  }
+  .btn__basket {
+    background-color: #000000;
+    color: #ffffff;
+  }
+  .btn__shopping {
+    border: 1px solid #000000;
+    background-color: #ffffff;
+  }
+}
 
 // product list
 .product-list {
