--- a/src/web/assets/css/_breakpoints.scss
+++ b/src/web/assets/css/_breakpoints.scss
@@ -1,15 +1,15 @@
 @mixin desksm($max-width: 1400px) {
-	@media only screen and (max-width: $max-width) {
+	@media (max-width: $max-width) {
 			@content;
 	}
 }
 @mixin mobile($max-width: 750px) {
-	@media only screen and (max-width: $max-width) {
+	@media (max-width: $max-width) {
 			@content;
 	}
 }
 @mixin custom($max-width: $max-width) {
-	@media only screen and (max-width: $max-width) {
+	@media (max-width: $max-width) {
 			@content;
 	}
 }
