--- a/src/web/assets/css/sprite/_mo_icons.scss
+++ b/src/web/assets/css/sprite/_mo_icons.scss
@@ -75,6 +75,39 @@ $ico-like-on-total-width: 281px;
 $ico-like-on-total-height: 149px;
 $ico-like-on-image: '../images/sprite/mo_icons.png';
 $ico-like-on: (31px, 98px, -31px, -98px, 31px, 26px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_like_on', );
+$ico-menu-tag-celeb-name: 'ico_menu_tag_celeb';
+$ico-menu-tag-celeb-x: 94px;
+$ico-menu-tag-celeb-y: 98px;
+$ico-menu-tag-celeb-offset-x: -94px;
+$ico-menu-tag-celeb-offset-y: -98px;
+$ico-menu-tag-celeb-width: 18px;
+$ico-menu-tag-celeb-height: 15px;
+$ico-menu-tag-celeb-total-width: 281px;
+$ico-menu-tag-celeb-total-height: 149px;
+$ico-menu-tag-celeb-image: '../images/sprite/mo_icons.png';
+$ico-menu-tag-celeb: (94px, 98px, -94px, -98px, 18px, 15px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_menu_tag_celeb', );
+$ico-menu-tag-funkplay-name: 'ico_menu_tag_funkplay';
+$ico-menu-tag-funkplay-x: 231px;
+$ico-menu-tag-funkplay-y: 80px;
+$ico-menu-tag-funkplay-offset-x: -231px;
+$ico-menu-tag-funkplay-offset-y: -80px;
+$ico-menu-tag-funkplay-width: 18px;
+$ico-menu-tag-funkplay-height: 18px;
+$ico-menu-tag-funkplay-total-width: 281px;
+$ico-menu-tag-funkplay-total-height: 149px;
+$ico-menu-tag-funkplay-image: '../images/sprite/mo_icons.png';
+$ico-menu-tag-funkplay: (231px, 80px, -231px, -80px, 18px, 18px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_menu_tag_funkplay', );
+$ico-menu-tag-picks-name: 'ico_menu_tag_picks';
+$ico-menu-tag-picks-x: 249px;
+$ico-menu-tag-picks-y: 80px;
+$ico-menu-tag-picks-offset-x: -249px;
+$ico-menu-tag-picks-offset-y: -80px;
+$ico-menu-tag-picks-width: 18px;
+$ico-menu-tag-picks-height: 18px;
+$ico-menu-tag-picks-total-width: 281px;
+$ico-menu-tag-picks-total-height: 149px;
+$ico-menu-tag-picks-image: '../images/sprite/mo_icons.png';
+$ico-menu-tag-picks: (249px, 80px, -249px, -80px, 18px, 18px, 281px, 149px, '../images/sprite/mo_icons.png', 'ico_menu_tag_picks', );
 $logo-name: 'logo';
 $logo-x: 0px;
 $logo-y: 80px;
@@ -89,7 +122,7 @@ $logo: (0px, 80px, 0px, -80px, 231px, 18px, 281px, 149px, '../images/sprite/mo_i
 $mo-icons-width: 281px;
 $mo-icons-height: 149px;
 $mo-icons-image: '../images/sprite/mo_icons.png';
-$mo-icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $btn-header-search, $ico-header-search, $ico-like, $ico-like-on, $logo, );
+$mo-icons-sprites: ($bg-header-funkplay-off, $bg-header-funkplay-on, $btn-header-search, $ico-header-search, $ico-like, $ico-like-on, $ico-menu-tag-celeb, $ico-menu-tag-funkplay, $ico-menu-tag-picks, $logo, );
 $mo-icons: (281px, 149px, '../images/sprite/mo_icons.png', $mo-icons-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
