--- a/src/web/assets/css/_reset.scss
+++ b/src/web/assets/css/_reset.scss
@@ -138,6 +138,7 @@ input[type='checkbox'] {
 	height: 14px;
 	& + label {
 		padding-left: 3px;
+		vertical-align: middle;
 	}
 	& ~ input[type='checkbox'] {
 		margin-left: 25px;
