--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -1220,8 +1220,7 @@
     .product-list__sort {
       position: fixed;
       left: 50%;
-      bottom: calc(constant(safe-area-inset-bottom));
-      bottom: calc(env(safe-area-inset-bottom));
+      bottom: 0;
       z-index: 15;
       margin-left: -50px;
     }
