--- a/src/web/assets/css/_components.scss
+++ b/src/web/assets/css/_components.scss
@@ -95,29 +95,24 @@
 
 // layer
 .layer__body {
-	display: none;
+	// display: none;
 	position: fixed;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.4);
+	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 100;
 	.layer__wrap {
 		position: absolute;
 		top:50%;
 		left:50%;
 		@include mixins.translate(-50%, -50%);
-		min-height: 300px;
 		background-color: #ffffff;
-    border: 1px solid #000;
-    border-radius: 42px;
-    overflow: hidden;
 		z-index: 101;
 	}
 	.layer__button {
 		display: flex;
-		text-align: center;
 		.btn {
 			flex: 1;
 			margin: 0 5px;
@@ -135,12 +130,5 @@
 			@include icons.retina-sprite(icons.$ico-close-group);
 			cursor: pointer;
 		}
-	}
-}
-
-.table__form {
-	display: flex;
-	&.form__margin {
-		padding: 20px 0;
 	}
 }
