--- a/src/web/assets/css/product.scss
+++ b/src/web/assets/css/product.scss
@@ -1220,7 +1220,8 @@
     .product-list__sort {
       position: fixed;
       left: 50%;
-      bottom: 0;
+      bottom: calc(constant(safe-area-inset-bottom));
+      bottom: calc(env(safe-area-inset-bottom));
       z-index: 15;
       margin-left: -50px;
     }
